# SDLVideoPlayer

./: .gitignore  CMakeLists.txt  README.md
src/: AudioDecoder.cpp  AudioDecoder.h  FileDemuxer.cpp  FileDemuxer.h  PacketDecoder.cpp  PacketDecoder.h  SDLVideoPlayer.cpp  SDLVideoPlayer.h  VideoDecoder.cpp  VideoDecoder.h  main.cpp
